--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+
+#title {
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+}
+
+div h5 {
+    margin: auto;
+    margin-bottom: 40px;
+}
+
 #tabs-1 {
     font-size: 16px;
     font-family: Arial;
