--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
 
 #title {
     background-image: url(images/american-flag-banner.jpg);
+    margin: auto;
     height: 100px;
+}
+
+#box {
+    margin-left: auto;  
+    margin-right: auto;
+    width: 350px;
+    background-color: #ffffff;
+    opacity: 0.75;
+    filter: alpha(opacity=75);
 }
 
 #titleText {
     margin: auto;
-    width: 300px;
+    width: 270px;
     vertical-align: middle;
     color: black;
 }
