--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     background-image: url(images/american-flag-banner.jpg);
     margin: auto;
     height: 100px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 #box {
@@ -12,6 +14,7 @@
     background-color: #ffffff;
     opacity: 0.75;
     filter: alpha(opacity=75);
+    padding: 5px;
 }
 
 #titleText {
