fixed graph stuff to make it look better

--- a/style.css
+++ b/style.css
@@ -49,70 +49,55 @@ div h5 {
     color: #FFFFFF;
     font-weight: bold;
 }
-
+canvas {
+    position: relative;
+    left: 22px;
+}
 #chartData {
     
     background-color: aliceblue;
     border-radius: 10px;
-    height: 450px;
-    width: auto;
     
 }
 
 #chartData1 {
     background-color: aliceblue;
     border-radius: 10px;
-    height: 450px;
-    width: auto;
 }
 
 #chartData2 {
     background-color: aliceblue;
     border-radius: 10px;
-    height: 450px;
-    width: auto;
 }
 
 #chartData20 {
     background-color: aliceblue;
     border-radius: 10px;
-    height: 450px;
-    width: auto;
 }
 
 #chartData21 {
     background-color: aliceblue;
     border-radius: 10px;
-    height: 450px;
-    width: auto;
 }
 
 #chartData22 {
     background-color: aliceblue;
     border-radius: 10px;
-    height: 450px;
-    width: auto;
 }
 
 #chartData30 {
     background-color: aliceblue;
     border-radius: 10px;
-    height: 450px;
-    width: auto;
 }
 
 #chartData31 {
     background-color: aliceblue;
     border-radius: 10px;
-    height: 450px;
-    width: auto;
 }
 
 #chartData32 {
     background-color: aliceblue;
     border-radius: 10px;
-    height: 450px;
-    width: auto;
 }
 
 #questionData {
